<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.show.MovieDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/movie_image"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/movie_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="50dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_image">

            <TextView
                android:id="@+id/movie_is_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/new_movie_label"
                android:textColor="@android:color/holo_green_light"
                android:visibility="gone" />

            <TextView
                android:id="@+id/movie_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@{movie.info.year}" />

            <TextView
                android:id="@+id/movie_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@android:color/darker_gray"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text='16+' />

            <TextView
                android:id="@+id/movie_duration_or_episodes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="5 сезонов | время фильма 2 h 3 min"
                android:visibility="visible" />

            <TextView
                android:id="@+id/movie_quality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ccc"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="ULTRA HD" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_show_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@android:color/white"
            android:text="@string/show_label"
            android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toStartOf="@id/movie_download_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_details" />

        <ImageView
            android:id="@+id/movie_download_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_download"
            app:layout_constraintBottom_toBottomOf="@id/btn_show_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_show_movie"
            app:tint="@color/icon_tint" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/movie_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/btn_show_movie">

            <TextView
                android:id="@+id/movie_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/movie_actors_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/actors_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_description" />

            <TextView
                android:id="@+id/movie_actors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text=""
                app:layout_constraintStart_toEndOf="@+id/movie_actors_label"
                app:layout_constraintTop_toTopOf="@+id/movie_actors_label" />

            <TextView
                android:id="@+id/movie_director_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/director_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_actors" />

            <TextView
                android:id="@+id/movie_director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@{movie.info.director}"
                app:layout_constraintStart_toEndOf="@+id/movie_director_label"
                app:layout_constraintTop_toBottomOf="@+id/movie_actors" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/btn_action_with_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintTop_toBottomOf="@+id/movie_desc">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/movie_add_like_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:drawableTop="@drawable/ic_like"
                android:text="@string/like_label" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/movie_add_dislike_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:drawableTop="@drawable/ic_dislike"
                android:text="@string/dislike_label" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/movie_share_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:drawableTop="@drawable/ic_share"
                android:text="@string/share_label" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/btn_action_with_movie">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/similar_movies_label"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/similares_movies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/movie_item" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/not_found_error"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/white"
            android:elevation="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="8dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_sad_smile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:gravity="center"
                android:text="@string/error_not_found_movie"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/movie_loader"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/white"
            android:elevation="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/movie_detail_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
